make note of bugs

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       <button class="btn-info" id="start-game">Play Dino Hangman!</button>
       <div class="display-game">
         <label for="guess">Enter a letter to see if it is found in the mystery dinosaur name!</label>
-        <input id="guess" type="text" maxlength="1">
+        <input id="guess" type="text" minlength="1" maxlength="1">
         <button class="btn-info" id="check-letter">Check My Letter!</button><br>
         Mystery Dino:
         <span id="correct-guesses"></span><br>
