--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,13 @@
         <label for="guess">Enter a letter to see if it is found in the mystery dinosaur name!</label>
         <input id="guess" type="text" minlength="1" maxlength="1">
         <button class="btn-info" id="check-letter">Check My Letter!</button><br>
+        <span id="timer"></span><br>
         Mystery Dino:
         <span id="correct-guesses"></span><br>
         Wrong Guesses:
         <span id="wrong-guesses"></span><br>
-        <span id="display-hangman"></span>
+        <span id="display-hangman"></span><br>
+        <span id="game-over"></span>
       </div>
     </div>
   </body>
