Add win condition/fix timer related bugs

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
         Wrong Guesses:
         <span id="wrong-guesses"></span><br>
         <span id="display-hangman"></span><br>
-        <span id="game-over"></span>
+        <h3><span id="game-over"></span></h3>
       </div>
     </div>
   </body>
