--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
   <body>
     <div class="container">
       <h1>Dino Ipsum</h1>
-      <label for="paragraphs">Enter the number of paragraphs you want:</label>
-      <input id="paragraphs" type="number">
-      <label for="words">Enter the number of words you want per paragraph:</label>
+      <label for="paragraphs">Enter the number of paragraphs you want:</label><br>
+      <input id="paragraphs" type="number"><br>
+      <label for="words">Enter the number of words you want per paragraph:</label><br>
       <input id="words" type="number">
-      <button class="btn-success" id="dinoSubmit">Get Dinos!</button>
-      <button class="btn-info" id="randomDino">Show Me a Random Dino!</button>
-      <div class="errors"></div>
+      <button class="btn-success" id="dinoSubmit">Get Dinos!</button><br><br>
       <div class="showDinos"></div>
+      <button class="btn-info" id="randomDino">Show Me a Random Dino!</button><br><br>
+      <div class="errors"></div>
       <div class="showRandomDino"></div>
       <button class="btn-info" id="start-game">Play Dino Hangman!</button>
       <div class="display-game">
